kubernetes/myblog-gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myblog-gateway
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myblog-gateway
    spec:
      containers:
      - name: myblog-gateway
        image: nomkhonwaan/myblog-gateway:latest
        ports:
        - containerPort: 3000
