kubernetes/myblog-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myblog-gateway
  labels:
    app: myblog-gateway
spec:
  type: NodePort
  ports:
  - port: 3000
  selector:
    app: myblog-gateway
