kubernetes/myblog-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myblog-server
  labels:
    app: myblog-server
spec:
  type: NodePort
  ports:
  - port: 9090
  selector:
    app: myblog-server
