kubernetes/myblog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myblog
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: myblog
  rules:
  - host: api.staging.cluster-1.nomkhonwaan-project.nomkhonwaan.com
    http:
      paths:
      - backend:
          serviceName: myblog-gateway
          servicePort: 3000
  - host: api-staging.nomkhonwaan.com
    http:
      paths:
      - backend:
          serviceName: myblog-gateway
          servicePort: 3000
